--- a/skels/register.html
+++ b/skels/register.html
@@ -14,16 +14,17 @@
                 <img src="../imgs/logo.png" class="logo">
             </h1>
             <p class="title">Registrati</p>
+            <p class="obb">Tutti i campi sono obbligatori*</p>
         </div>
         
         <div class="login">
             <form method="post" class="form">
-                <input type="text" class="nome">
-                <input type="text" class="cognome">
-                <input type="text" class="email">
-                <input type="text" class="telefono">
-                <input type="text" class="pw">
-                <input type="text" class="confirmPW">
+                <input type="text" class="nome" placeholder="Nome">
+                <input type="text" class="cognome" placeholder="Cognome">
+                <input type="text" class="email" placeholder="Email">
+                <input type="text" class="telefono" placeholder="Numero di Telefono">
+                <input type="text" class="pw" placeholder="Password">
+                <input type="text" class="confirmPW" placeholder="Conferma Password">
             </form>
         </div>
         
