registrazione manca script

--- a/skels/register.html
+++ b/skels/register.html
@@ -27,6 +27,12 @@
                 <input type="text" class="confirmPW" placeholder="Conferma Password">
             </form>
         </div>
+        <div class="submit">
+            <button class="btn">Registrati</button>
+        </div>
+        <div class="privacy">
+            By clicking “Continue with Email” above, you acknowledge that you<br> have read and understood, and agree to Que Qalor’s Terms &<br> Conditions and Privacy Policy.
+        </div>
         
     </section>
 </body>
