--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -8,9 +8,14 @@
     <title>Gestionale</title>
 </head>
 <body>
-    
-    <h1 class="titolo">Gestionale</h1>
+    <section class="page">
+        <div class="titolo">
+            <h1>
+                <img src="../imgs/logo.png" class="logo">
+            </h1>
+            <p class="title">Gestionale</p>
+        </div>
 
-    <form action=""></form>
+    </section>    
 </body>
 </html>
