--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -16,6 +16,16 @@
             <p class="title">Gestionale</p>
         </div>
 
+        <div class="login">
+            <form method="post" class="form">
+                <label class="label">EMAIL</label>
+                <input type="text" class="email" placeholder="Email">
+                <label  class="label">PASSWORD</label>
+                <input type="password" class="password" placeholder="Password">
+                <label class="label">ID</label>
+                <input type="text" class="id" placeholder="ID">
+            </form>
+        </div>
     </section>    
 </body>
 </html>
