aggiunto stile al bottone

--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -24,8 +24,14 @@
                 <input type="password" class="password" placeholder="Password">
                 <label class="label">ID</label>
                 <input type="text" class="id" placeholder="ID">
+
+                <button class="btn">
+                    <p class="accedi">Accedi</p>
+                </button>
             </form>
         </div>
+
+        
     </section>    
 </body>
 </html>
