--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -25,12 +25,21 @@
                 <label class="label">ID</label>
                 <input type="text" class="id" placeholder="ID">
 
-                <button class="btn">
-                    <p class="accedi">Accedi</p>
-                </button>
+                <div class="forgotpass">
+                    <p>Forgot password?</p>
+                </div>
+                <div class="submit">
+                    <button class="btn">
+                        <p class="accedi">Accedi</p>
+                    </button>
+                </div>
+
+                
             </form>
         </div>
-
+        <div class="privacy">
+           <p> By clicking "Continue with Email" above, you acknoledge that you <br> have read and understood, and agree to Que Qalor's Terms & <br> Conditions and Privacy Policy </p>
+        </div>
         
     </section>    
 </body>
