collegamento del js

--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -40,6 +40,8 @@
         <div class="privacy">
            <p> By clicking "Continue with Email" above, you acknoledge that you <br> have read and understood, and agree to Que Qalor's Terms & <br> Conditions and Privacy Policy </p>
         </div>
+
+        <script src="../static/script-gestionale.js"></script>
         
     </section>    
 </body>
