--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -34,6 +34,9 @@
                     </button>
                 </div>
 
+                <div class="error hidden">
+                    <span class="avviso hidden">Inserisci tutti i dati correttamenti</span>
+                </div>
                 
             </form>
         </div>
