--- a/skels/register.html
+++ b/skels/register.html
@@ -22,8 +22,8 @@
                 <input type="text" class="cognome" placeholder="Cognome">
                 <input type="text" class="email" placeholder="Email">
                 <input type="text" class="telefono" placeholder="Numero di Telefono">
-                <input type="text" class="pw" placeholder="Password">
-                <input type="text" class="confirmPW" placeholder="Conferma Password">
+                <input type="password" class="pw" placeholder="Password">
+                <input type="password" class="confirmPW" placeholder="Conferma Password">
             </form>
         </div>
         <div class="submit">
