--- a/skels/landing.html
+++ b/skels/landing.html
@@ -8,8 +8,30 @@
     <title>Landing</title>
 </head>
 <body>
-    
+    <section class="page">
+        <div class="navbar">
+            <div>
+                <img src="../imgs/logo.png" class="logo">
 
+            </div>
+            <div class="contact1">
+                <p>Chi siamo</p>
+                <p>Prodotti</p>
+                <p>Prestazioni</p>
+            </div>
+
+            <div class="contact2">
+                <p>Assistenza</p>
+                <p>Account</p>
+               <span id="consulenza"><p>Consulenza</p></span>
+            </div>
+        </div>  
+
+        <div class="qualcosa">
+            <h1 class="titolo">QueQalor</h1>
+        </div>
+    </section>
+    
     <script src="../static/landing/script-landing.js"></script>
 </body>
 </html>
