--- a/skels/landing.html
+++ b/skels/landing.html
@@ -29,6 +29,7 @@
 
         <div class="qualcosa">
             <h1 class="titolo">QueQalor</h1>
+            <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
         </div>
     </section>
     
