--- a/skels/landing.html
+++ b/skels/landing.html
@@ -31,6 +31,12 @@
             <h1 class="titolo">QueQalor</h1>
             <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
         </div>
+
+        <div class="submit">
+            <button class="btn">
+                <p class="inizia">Inizia</p>
+            </button>
+        </div>
     </section>
     
     <script src="../static/landing/script-landing.js"></script>
