--- a/skels/landing.html
+++ b/skels/landing.html
@@ -30,11 +30,13 @@
         <div class="qualcosa">
             <h1 class="titolo">QueQalor</h1>
             <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
+            <p class="sottotitolo2">Il futuro è QALOROSO</p>
         </div>
 
         <div class="submit">
             <button class="btn">
                 <p class="inizia">Inizia</p>
+                <img class="freccetta" src="../imgs/freccetta.svg">
             </button>
         </div>
     </section>
