--- a/skels/landing.html
+++ b/skels/landing.html
@@ -34,10 +34,10 @@
         </div>
 
         <div class="submit">
-            <button class="btn">
+            <div class="btn">
                 <p class="inizia">Inizia</p>
-                <img class="freccetta" src="../imgs/freccetta.svg">
-            </button>
+                <a href="*"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
+            </div>
         </div>
     </section>
     
