--- a/skels/landing.html
+++ b/skels/landing.html
@@ -32,13 +32,23 @@
             <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
             <p class="sottotitolo2">Il futuro è QALOROSO</p>
         </div>
-
-        <div class="submit">
+        
+        <div class="container">
             <div class="btn">
-                <p class="inizia">Inizia</p>
-                <a href="*"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
+                <div>
+                    <p class="inizia">Inizia</p>
+                </div>
+                <div>
+                    <a href="*"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
+                </div>
+            </div>
+
+            <div class="btn2">
+                <p class="sottobtn">Vedi i prezzi</p>
+                <a href="*"> <img src="../imgs/freccetta2.svg" class="freccetta2"></a>
             </div>
         </div>
+
     </section>
     
     <script src="../static/landing/script-landing.js"></script>
