--- a/skels/landing.html
+++ b/skels/landing.html
@@ -32,7 +32,7 @@
             <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
             <p class="sottotitolo2">Il futuro è QALOROSO</p>
         </div>
-        
+
         <div class="container">
             <div class="btn">
                 <div>
@@ -49,6 +49,39 @@
             </div>
         </div>
 
+        <div class="container2">
+            <div class="boxwhite">
+                <div>
+                    <p class="testo">Qualcosa</p>
+                </div>
+            </div>
+
+            <div class="textright">
+                    <dl>
+                        <ol>
+                            Fino a 
+                        </ol>
+                        <ol class="quarantacinquepx">
+                            30%
+                        </ol>
+                        <ol>
+                            Pulita con:
+                        </ol>
+
+                        <ol>
+                            -Incanalazione Aria 
+                        </ol>
+
+                        <ol>
+                            -Batteria Termica
+                        </ol>
+
+                        <ol>
+                            -Circolo preciso dell'aria
+                        </ol>
+                    </dl>
+            </div>
+        </div>
     </section>
     
     <script src="../static/landing/script-landing.js"></script>
