--- a/skels/landing.html
+++ b/skels/landing.html
@@ -52,7 +52,7 @@
         <div class="container2">
             <div class="boxwhite">
                 <div>
-                    <p class="testo">Qualcosa</p>
+                    <p class="testo">Come funziona</p>
                 </div>
             </div>
 
@@ -64,9 +64,10 @@
                         <ol class="quarantacinquepx">
                             30%
                         </ol>
-                        <ol>
+                            <ol>
                             Pulita con:
                         </ol>
+                        
 
                         <ol>
                             -Incanalazione Aria 
