--- a/skels/landing.html
+++ b/skels/landing.html
@@ -53,6 +53,11 @@
             <div class="boxwhite">
                 <div>
                     <p class="testo">Come funziona</p>
+                <div id="columnimages">
+                    <img src="../imgs/3.svg">
+                    <img src="../imgs/2.svg">
+                    <img src="../imgs/1.svg">
+                </div>
                 </div>
             </div>
 
