Struttura Card + Fix

--- a/skels/dashboard.html
+++ b/skels/dashboard.html
@@ -45,6 +45,21 @@
             </div>
             
         </div>
+        <div class="main">
+            <div class="profile">
+                <div class="icons">
+                    <img src="../imgs/SearchIcon.svg" alt="">
+                    <img src="../imgs/Notifications.svg" class="notifyicon">
+                </div>
+                <img src="../imgs/profilePic.png" class="profileBtn" alt="">
+            </div>
+            <div class="whiteBox">
+                <div class="type">
+                    <img class="img" src="../imgs/mdi_air-conditioner.svg">
+                </div>
+                
+            </div>
+        </div>
     </section>
 </body>
 </html>
