--- a/skels/landing.html
+++ b/skels/landing.html
@@ -27,7 +27,7 @@
             </div>
         </div>  
 
-        <div class="qualcosa">
+        <div>
             <h1 class="titolo">QueQalor</h1>
             <p class="sottotitolo">Ventilazione intelligente come non l'hai mai vista</p>
             <p class="sottotitolo2">Il futuro è QALOROSO</p>
@@ -89,7 +89,16 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="page">       
+
+        <div>
+            <h1 class="titolo">Chi siamo</h1>
+            <p class="sottotitolo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione qui, quis </p>
+            <p class="sottotitolo3">Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+
+    </section>
     <script src="../static/landing/script-landing.js"></script>
 </body>
 </html>
