--- a/skels/dashboard.html
+++ b/skels/dashboard.html
@@ -55,7 +55,14 @@
             </div>
             <div class="whiteBox">
                 <div class="type">
-                    <img class="img" src="../imgs/mdi_air-conditioner.svg">
+                    <img class="img" src="../imgs/mdi_air-conditionerBIG.svg" class="air">
+                </div>
+                <div class="title">
+                    <span>Efficenza</span>
+                    <span>Consumo</span>
+                    <span>RPM</span>
+                    <span>Accensione</span>
+                    <span>Attività</span>
                 </div>
                 
             </div>
