--- a/skels/landing.html
+++ b/skels/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -90,14 +90,30 @@
         </div>
     </section>
 
-    <section class="page">       
-
+    <section class="page2">       
         <div>
-            <h1 class="titolo">Chi siamo</h1>
-            <p class="sottotitolo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione qui, quis </p>
+            <h1 class="titolo2">Chi siamo</h1>
+            <p class="sottotitolo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione qui, quis </p>
             <p class="sottotitolo3">Lorem ipsum dolor sit amet consectetur</p>
         </div>
 
+        <div class="container3">
+            <div class="box">
+                <p>Daniele Minnielli</p>       
+            </div>
+
+            <div class="box">
+                <p>Piergiusto Ranieri</p>
+            </div>
+
+            <div class="box">
+                <p>Vito De Sandi</p>
+            </div>
+
+            <div class="box">
+                <p>Guizzardi Gianmarco</p>
+            </div>
+        </div>
     </section>
     <script src="../static/landing/script-landing.js"></script>
 </body>
