--- a/skels/landing.html
+++ b/skels/landing.html
@@ -99,19 +99,24 @@
 
         <div class="container3">
             <div class="box">
-                <p>Daniele Minnielli</p>       
+                <p>Daniele Minnielli</p>
+                <label>Back End Developer</label>       
             </div>
 
             <div class="box">
                 <p>Piergiusto Ranieri</p>
+                <label>UX/UI Designer</label> 
             </div>
 
             <div class="box">
                 <p>Vito De Sandi</p>
+                <label>Front End Developer</label> 
             </div>
 
             <div class="box">
+                <img src="../imgs/immaginegruppo.png">
                 <p>Guizzardi Gianmarco</p>
+                <label>Front End Developer</label> 
             </div>
         </div>
     </section>
