--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -19,11 +19,11 @@
         <div class="login">
             <form method="post" class="form">
                 <label class="label">EMAIL</label>
-                <input type="text" class="email" placeholder="Email">
+                <input name="email"type="text" class="email" placeholder="Email">
                 <label  class="label">PASSWORD</label>
-                <input type="password" class="password" placeholder="Password">
+                <input name="pw" type="password" class="password" placeholder="Password">
                 <label class="label">ID</label>
-                <input type="text" class="id" placeholder="ID">
+                <input name="id" type="text" class="id" placeholder="ID">
 
                 <div class="forgotpass">
                     <p>Forgot password?</p>
@@ -33,11 +33,9 @@
                         <p class="accedi">Accedi</p>
                     </button>
                 </div>
-
                 <div class="error hidden">
-                    <span class="avviso hidden">Inserisci tutti i dati correttamenti</span>
+                    <span class="avviso hidden">Inserisci tutti i dati correttamente</span>
                 </div>
-                
             </form>
         </div>
         <div class="privacy">
