--- a/skels/landing.html
+++ b/skels/landing.html
@@ -99,26 +99,55 @@
 
         <div class="container3">
             <div class="box">
-                <p>Daniele Minnielli</p>
-                <label>Back End Developer</label>       
+                <div class="imgbox">
+                    <img src="../imgs/immaginegruppo.png">
+                </div>
+                <div class="testino">
+                    <p>Daniele Minnielli</p>
+                </div>
+                <div>
+                    <label>Back End Developer</label>     
+                </div>
             </div>
 
             <div class="box">
-                <p>Piergiusto Ranieri</p>
-                <label>UX/UI Designer</label> 
+                <div class="imgbox">
+                    <img src="../imgs/immaginegruppo.png">
+                </div>
+                <div class="testino">
+                    <p>Piergiusto Ranieri</p>
+                </div>
+                <div>
+                    <label>UX/UI Designer</label> 
+                </div>    
             </div>
 
             <div class="box">
-                <p>Vito De Sandi</p>
-                <label>Front End Developer</label> 
+                <div class="imgbox">
+                    <img src="../imgs/immaginegruppo.png">
+                </div>
+                <div class="testino">
+                    <p>Vito De Sandi</p>
+                </div>
+                <div>
+                    <label>Front End Developer</label> 
+                </div>
             </div>
 
             <div class="box">
-                <img src="../imgs/immaginegruppo.png">
-                <p>Guizzardi Gianmarco</p>
-                <label>Front End Developer</label> 
+                <div class="imgbox">
+                    <img src="../imgs/immaginegruppo.png">
+                </div>
+
+                <div class="testino">
+                    <p>Guizzardi Gianmarco</p>
+                </div>
+                
+                <div>
+                    <label>Front End Developer</label> 
+                </div>
             </div>
-        </div>
+    
     </section>
     <script src="../static/landing/script-landing.js"></script>
 </body>
