Struttura Barra Supporto

--- a/skels/dashboard.html
+++ b/skels/dashboard.html
@@ -10,36 +10,41 @@
 <body>
     <section class="page">
         <div class="leftBar">
-            <div class="headerLeft">
-                <img src="../imgs/logo.png" alt="logo" class="logo">
-                <span class="clubs">I tuoi dispositivi</span>
-            </div>
-            <div class="switcher">
-                <span>ID dispositivo </span> 
-                <img class="img" src="../imgs/tabler_switch-3.svg">
-            </div>
-            <div class="scelte">
-                <ul>
-                    <li>
-                        <img class="imgBar" src="../imgs/mdi_air-conditioner.svg">
-                        <span class="ariaText">Aria</span>
-                    </li>
-                    <li>
-                        <img class="imgBar" src="../imgs/mdi_temperature.svg">
-                        <span class="ariaText">Temperatura</span>
-                    </li>
-                    <li>
-                        <img src="../imgs/material-symbols_energy-savings-leaf.svg" class="imgBar">
-                        <span class="ariaText">Energia</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="supporto">
-                <div class="button">
-                    <img src="../imgs/formaSupporto.svg" class="supportoSVG">
-                    <span class="supportText">Supporto</span>
+            <div class="mainLeftbar">
+                <div class="headerLeft">
+                    <img src="../imgs/logo.png" alt="logo" class="logo">
+                    <span class="clubs">I tuoi dispositivi</span>
                 </div>
-                <span class="faqText">FAQ</span>
+                <div class="switcher">
+                    <span>ID dispositivo </span> 
+                    <img class="img" src="../imgs/tabler_switch-3.svg">
+                </div>
+                <div class="scelte">
+                    <ul>
+                        <li>
+                            <img class="imgBar" src="../imgs/mdi_air-conditioner.svg">
+                            <span class="ariaText">Aria</span>
+                        </li>
+                        <li>
+                            <img class="imgBar" src="../imgs/mdi_temperature.svg">
+                            <span class="ariaText">Temperatura</span>
+                        </li>
+                        <li>
+                            <img src="../imgs/material-symbols_energy-savings-leaf.svg" class="imgBar">
+                            <span class="ariaText">Energia</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="supportContainer">
+                <div class="support">
+                    <div class="btn">
+                        <span> Supporto</span>
+                    </div>
+                    <div class="faq">
+                        <a href="#">FAQ</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="main">
