--- a/skels/gestionale.html
+++ b/skels/gestionale.html
@@ -17,21 +17,15 @@
         </div>
 
         <div class="login">
-            <form method="post" class="form">
+            <form method="post" class="form" onsubmit="return false;">
                 <label class="label">EMAIL</label>
                 <input name="email"type="text" class="email" placeholder="Email">
                 <label  class="label">PASSWORD</label>
                 <input name="pw" type="password" class="password" placeholder="Password">
                 <label class="label">ID</label>
                 <input name="id" type="text" class="id" placeholder="ID">
-
-                <div class="forgotpass">
-                    <p>Forgot password?</p>
-                </div>
                 <div class="submit">
-                    <button class="btn">
-                        <p class="accedi">Accedi</p>
-                    </button>
+                    <button type="submit" class="btn accedi">Accedi</button>
                 </div>
                 <div class="error hidden">
                     <span class="avviso hidden">Inserisci tutti i dati correttamente</span>
