Support Section finita

--- a/skels/dashboard.html
+++ b/skels/dashboard.html
@@ -39,6 +39,9 @@
             <div class="supportContainer">
                 <div class="support">
                     <div class="btn">
+                        <div class="supportIcon">
+                            <img src="../imgs/supportIcon.svg" alt="">
+                        </div>
                         <span> Supporto</span>
                     </div>
                     <div class="faq">
