--- a/skels/landing.html
+++ b/skels/landing.html
@@ -15,8 +15,8 @@
 
             </div>
             <div class="contact1">
-                <p>Chi siamo</p>
-                <p>Prodotti</p>
+                <a href="#chisiamo">Chi siamo</a>
+                <a href="#prodotto">Prodotti</a>
                 <p>Prestazioni</p>
             </div>
 
@@ -39,13 +39,13 @@
                     <p class="inizia">Inizia</p>
                 </div>
                 <div>
-                    <a href="*"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
+                    <a href="#"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
                 </div>
             </div>
 
             <div class="btn2">
                 <p class="sottobtn">Vedi i prezzi</p>
-                <a href="*"> <img src="../imgs/freccetta2.svg" class="freccetta2"></a>
+                <a href="#"> <img src="../imgs/freccetta2.svg" class="freccetta2"></a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
         </div>
     </section>
 
-    <section class="page2">       
+    <section class="page2" id="chisiamo">       
         <div>
             <h1 class="titolo2">Chi siamo</h1>
             <p class="sottotitolo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione qui, quis </p>
@@ -148,6 +148,13 @@
                 </div>
             </div>
     
+    </section>
+
+    <section class="page3" id="prodotto">
+        <div class="container-page3">
+            <h1>Il futuro.</h1>
+            <p class="sottotitolo1">QueQalor</p>
+        </div>
     </section>
     <script src="../static/landing/script-landing.js"></script>
 </body>
