--- a/skels/landing.html
+++ b/skels/landing.html
@@ -10,9 +10,8 @@
 <body>
     <section class="page">
         <div class="navbar">
-            <div>
+            <div class="logo-container">
                 <img src="../imgs/logo.png" class="logo">
-
             </div>
             <div class="contact1">
                 <p>Chi siamo</p>
@@ -39,13 +38,13 @@
                     <p class="inizia">Inizia</p>
                 </div>
                 <div>
-                    <a href="*"> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
+                    <a href=""> <img src="../imgs/freccetta.svg" class="freccetta"></a> 
                 </div>
             </div>
 
             <div class="btn2">
                 <p class="sottobtn">Vedi i prezzi</p>
-                <a href="*"> <img src="../imgs/freccetta2.svg" class="freccetta2"></a>
+                <a href="#"> <img src="../imgs/freccetta2.svg" class="freccetta2"></a>
             </div>
         </div>
 
