--- a/skels/landing.html
+++ b/skels/landing.html
@@ -153,7 +153,7 @@
     <section class="page3" id="prodotto">
         <div class="container-page3">
             <h1>Il futuro.</h1>
-            <p class="sottotitolo1">QueQalor</p>
+            <p class="sottotitolopage3">QueQalor</p>
         </div>
     </section>
     <script src="../static/landing/script-landing.js"></script>
