--- a/skels/landing.html
+++ b/skels/landing.html
@@ -155,6 +155,19 @@
             <h1>Il futuro.</h1>
             <p class="sottotitolopage3">QueQalor</p>
         </div>
+
+        <div class="vantsvant">
+            <div class="vantaggio">
+                <h3>Vantaggi</h3>
+                    <li>Tante belle cose</li>
+                    <li>Tante belle cose</li>
+                    <li>Tante belle cose e belle cose</li>
+            </div>
+            
+            <div class="svantaggio">
+
+            </div>
+        </div>
     </section>
     <script src="../static/landing/script-landing.js"></script>
 </body>
